Changed icons and image

--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
               <span class="font_pips additional-text-2_tablet additional-text-3_mobile">#flexoffice</span>
               <span class="font_pips additional-text-2_tablet additional-text-3_mobile">#meetingroom</span>
             </div>
-            <h2 class="header-5_tablet header-5_mobile"><span>Полезный сервис.</span> Просто внедряется 
+            <h2 class="header-5_tablet header-5_mobile"><span class="new-line">Полезный сервис.</span> Просто внедряется 
               в бизнес-процессы компании и не вызывает отторжения у пользователей.</h2>
             <div class="review-autor">
               <img src="./assets/images/photo-autor-1.png" alt="" class="review-autor__photo">
