--- a/index.html
+++ b/index.html
@@ -731,7 +731,9 @@
 
     const popupMenu = document.querySelector('.menu-popup')
     if (window.innerWidth < 768) {
-      popupMenu.style.height = window.innerHeight;
+      console.log(window.innerHeight)
+      console.log(popupMenu)
+      popupMenu.style.height = window.innerHeight + 'px';
     }
     const btnClosePopupMenu = document.querySelector('.menu-popup__btn-close')
     document.addEventListener('click', (e) => {
