--- a/index.html
+++ b/index.html
@@ -200,9 +200,11 @@
             </div>
           </div>
         </div>
-        <div class="swiper-button-next">
-        </div>
-        <div class="swiper-button-prev">
+        <div class="swiper-button__group">
+          <div class="swiper-button-next">
+          </div>
+          <div class="swiper-button-prev">
+          </div>
         </div>
       </div>
     </div>
@@ -263,8 +265,10 @@
         </div>
 
       </div>
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
+      <div class="swiper-button__group">
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+      </div>
     </div>
   </section>
 
@@ -616,9 +620,11 @@
             </div>
           </div>
         </div>
-        <div class="swiper-button-next">
-        </div>
-        <div class="swiper-button-prev">
+        <div class="swiper-button__group">
+          <div class="swiper-button-next">
+          </div>
+          <div class="swiper-button-prev">
+          </div>
         </div>
       </div>
     </div>
