--- a/index.html
+++ b/index.html
@@ -687,12 +687,12 @@
     <img src="./assets/images/skolkovo.png" alt="" class="footer__scolcovo">
   </footer>
 
-  <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
+  <script src="./libs/swiper/swiper-bondle.js"></script>
+  <script src="./libs/swiper/swiper-bondle.min.js"></script>
+  <script src="./libs/ScrollMagic/ScrollMagic.min.js"></script>
+  <script src="./libs/ScrollMagic/animation.gsap.js"></script>
+  <script src="./libs/ScrollMagic/debug.addIndicators.js"></script>
+  <script src="./libs/ScrollMagic/TweenMax.min.js"></script>
   <script>
     const mobileAppSwiper  = new Swiper(".mobile-app-swiper", {
       navigation: {
